管理员添加普通用户

--- a/web/enroll.html
+++ b/web/enroll.html
@@ -49,6 +49,8 @@
             	<label>ᠨᠢᠭᠤᠴᠠ ᠨᠣᠮᠸᠷ ᠢᠡᠨ ᠨᠤᠲᠠᠯᠠᠬᠤ:<br />  Нууц номер ин нотлох<br /></label>
                 <input type="password" name="repeatpassword" required/>
             </div>
+            <input type="hidden" name="admin" value="0"/>
+            <input type="hidden" name="code" value="0"/>
             <button onclick="enroll();"> ᠳᠠᠩᠰᠠᠯᠠᠬᠤ Данслах<br /></button>
             <span id="msg" style="color: red;" ></span>
     </div>
