--- a/web/goods.html
+++ b/web/goods.html
@@ -1,21 +1,12 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: Administrator
-  Date: 2020/4/8
-  Time: 11:00
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>ECharts</title>
-    <meta charset="utf-8">
-    <!-- 引入 ECharts 文件 -->
+    <meta charset="UTF-8">
+    <title>Title</title>
     <script src="js/echarts.min.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
 </head>
 <body>
-<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 <div id="main" style="width: 600px;height:400px;"></div>
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
@@ -23,9 +14,11 @@
     $.get("/queryAllGoodsServlet",function(result){
         var arr = new Array();
         var index = 0;
-        <c:forEach items="${goodsList}" var="goods">
-        arr[index++] = ${goods.sales};
-        </c:forEach>
+        arr[index++] ={goods.sales};
+        for(var u of arr){
+            items="${goodsList}" >
+            ["${u.name}"]
+        }
     },"json");
 
     // 指定图表的配置项和数据
@@ -43,24 +36,21 @@
             {
                 type : 'category',
                 data : [
-                    <c:forEach items="${goodsList}" var="g">
-                    ["${g.name}"],
-                    </c:forEach>
-                ]
-            }
-        ],
-        yAxis : [
-            {
-                type : 'value'
-            }
-        ],
+    ]
+    }
+    ],
+    yAxis : [
+        {
+            type : 'value'
+        }
+    ],
         series : [
-            {
-                name:'销量',
-                type:'bar',
+        {
+            name:'销量',
+            type:'bar',
 
-            }
-        ]
+        }
+    ]
     };
 
     // 使用刚指定的配置项和数据显示图表。
@@ -68,4 +58,3 @@
 </script>
 </body>
 </html>
-
