--- a/web/index.html
+++ b/web/index.html
@@ -125,7 +125,7 @@
 	<ul>
 	<li id='li1'><a href="zhuxingtu2.html"><img src="images/txltb2.png" /></a>
         <span id="loginUserName" style="font-size: 16px; position: relative; left: -2px;" onclick="tuichu();">user</span>
-        <a  href="/loginOutServlet" id="tuichu" onclick="">tuichu</a>
+        <a  href="/loginOutServlet" id="tuichu" onclick="">Буцан гарах</a>
 	<div id="C" class="D">
 	<a href="enroll.html"><br>Данслах</a>
 	<a href="login.html"><br>Нэвтрэх</a>
