--- a/web/zhuxingtu2.html
+++ b/web/zhuxingtu2.html
@@ -17,7 +17,7 @@
     // 指定图表的配置项和数据
     var option = {
         legend: {
-            data:['销量']
+            data:['学习时长']
         },
         tooltip: {
             show: true
@@ -48,7 +48,7 @@
         {
             name:'销量',
             type:'bar',
-            data
+            data:[5, 20, 36, 10, 10, 20]
         }
     ]
     };
