--- a/web/goods.html
+++ b/web/goods.html
@@ -14,46 +14,48 @@
     $.get("/queryAllGoodsServlet",function(result){
         var arr = new Array();
         var index = 0;
-        arr[index++] ={goods.sales};
+        arr[index++] =${goods.sales};
         for(var u of arr){
             items="${goodsList}" >
             ["${u.name}"]
+
         }
+        var option = {
+            title: {
+                text: 'ECharts 入门示例'
+            },
+            tooltip: {
+                show: true
+            },
+            legend: {
+                data:['销量']
+            },
+            xAxis : [
+                {
+                    type : 'category',
+                    data : [
+                    ]
+                }
+            ],
+            yAxis : [
+                {
+                    type : 'value'
+                }
+            ],
+            series : [
+                {
+                    name:'销量',
+                    type:'bar',
+
+                }
+            ]
+        };
+
+        // 使用刚指定的配置项和数据显示图表。
+
     },"json");
 
     // 指定图表的配置项和数据
-    var option = {
-        title: {
-            text: 'ECharts 入门示例'
-        },
-        tooltip: {
-            show: true
-        },
-        legend: {
-            data:['销量']
-        },
-        xAxis : [
-            {
-                type : 'category',
-                data : [
-    ]
-    }
-    ],
-    yAxis : [
-        {
-            type : 'value'
-        }
-    ],
-        series : [
-        {
-            name:'销量',
-            type:'bar',
-
-        }
-    ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
     myChart.setOption(option);
 </script>
 </body>
