论文加了一些内容

--- a/web/admin.html
+++ b/web/admin.html
@@ -21,7 +21,7 @@
 <div  id="adminNav" class="nav">
 	<ul class="clearfix">
     	<li><a href="table.html"><img src="images/putongyonghu2.png"></a></li>
-        <li><a href="#"><img src="images/shuju.png"></a></li>
+        <li><a href="totaltime.html"><img src="images/shuju.png"></a></li>
         <li><a href="index.html"><img src="images/shouye.png"></a></li>
         <li><a href="#"><img src="images/bianji2.png"></a></li>
         <li><a href="#"><img src="images/sousuo2.png"></a></li>
