--- a/web/totaltime.html
+++ b/web/totaltime.html
@@ -15,7 +15,15 @@
 <div id="adminNav"></div>
 <script type="text/javascript" src="js/include.js"></script>
 <main>
-<div id="main" style="width: 600px;height:400px;"></div>
+    <!--搜索区域开始-->
+    <div class="search">
+        <input type="date" placeholder="" type="date" placeholder="年/月/日" id="cnameQuery" name="cnameQuery"  />
+        <button type="submit" onclick="" style="margin-right: -20px ">search</button>
+        <button type="submit" onclick="send();" style="margin-right: -20px ">send email</button>
+        <!--<button class="jiajian" onclick="deleteUser();">-</button>-->
+    </div>
+    <!--搜索区域结束-->
+<div id="main" style="width:80%;height:700px;"></div>
 
 <script type="text/javascript">
 
@@ -23,14 +31,19 @@
     // 显示标题，图例和空的坐标轴
     myChart.setOption({
         title: {
-            text: '异步数据加载示例'
+            text: '显示所有用户使用的总时长'
         },
         tooltip: {},
         legend: {
             data:['时长']
         },
         xAxis: {
-            data: []
+            data: [],
+            axisLabel:{
+                formatter:function(value){
+                    return value.split("").join("\n");
+                }
+            }
         },
         yAxis: {},
         series: [{
@@ -42,33 +55,33 @@
 
     myChart.showLoading();    //数据加载完之前先显示一段简单的loading动画
 
-    var timel=[];    //类别数组（实际用来盛放X轴坐标值）
-    var dates=[];    //销量数组（实际用来盛放Y坐标值）
+    var totaltime=[];    //数组（实际用来盛放X轴坐标值）
+    var username=[];    //数组（实际用来盛放Y坐标值）
 
     $.ajax({
         type : "get",
         async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-        url : "queryOneStudyTimeServlet",    //请求发送到Servlet处
+        url : "queryAllGoodsServlet",    //请求发送到Servlet处
         data : {},
         dataType : "json",        //返回数据形式为json
         success : function(result) {
             //请求成功时执行该函数内容，result即为服务器返回的json对象
             if (result) {
                 for(var i=0;i<result.length;i++){
-                    dates.push(result[i].datein);    //挨个取出类别并填入类别数组
+                    totaltime.push(result[i].totaltime);
                 }
                 for(var i=0;i<result.length;i++){
-                    timel.push(result[i].timel);    //挨个取出销量并填入销量数组
+                    username.push(result[i].username);
                 }
                 myChart.hideLoading();    //隐藏加载动画
                 myChart.setOption({        //加载数据图表
                     xAxis: {
-                        data: dates
+                        data: username
                     },
                     series: [{
                         // 根据名字对应到相应的系列
                         name: '时长',
-                        data: timel
+                        data: totaltime
                     }]
                 });
 
